--- a/entity-crud/pom.xml
+++ b/entity-crud/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.3</version>
+		<version>2.6.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.projectfinal</groupId>
@@ -32,6 +32,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		 <dependency>
+     		 <groupId>org.springframework.boot</groupId>
+     		 <artifactId>spring-boot-starter-security</artifactId>
+   		 </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -54,6 +58,7 @@
   			<artifactId>openpdf</artifactId>
   			<version>1.3.30</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
